--- a/index.html
+++ b/index.html
@@ -212,6 +212,17 @@
                     <input type="number" id="slot_duration" value="30" min="15" max="120" step="5" required>
                 </div>
             </div>
+            <div class="form-group">
+                <label>Formas de pago *</label>
+                <input type="text" id="payment_methods" value="Efectivo, Transferencia" required>
+                <p class="helper-text">Ejemplo: Efectivo, Transferencia, Tarjeta de Crédito</p>
+            </div>
+
+            <div class="form-group">
+                <label>Política de cancelación *</label>
+                <input type="text" id="cancellation_policy" value="Puedes cancelar hasta 24 horas antes sin costo" required>
+                <p class="helper-text">Ejemplo: Cancelación gratuita hasta 24h antes</p>
+            </div>
             
             <button class="btn" onclick="connectGoogleCalendar()">Conectar Google Calendar</button>
             <div id="error" class="error"></div>
@@ -330,3 +341,4 @@
     </script>
 </body>
 </html>
+
