--- a/oauth-callback.html
+++ b/oauth-callback.html
@@ -103,7 +103,7 @@
                         office_hours: data.office_hours,
                         consultation_price: parseFloat(data.consultation_price),
                         slot_duration: parseInt(data.slot_duration),
-                        contact_phone: data.contact_phone || null
+                        contact_phone: data.contact_phone || null,
                         payment_methods: data.payment_methods,
                         cancellation_policy: data.cancellation_policy
                     })
@@ -136,4 +136,5 @@
     </script>
 </body>
 </html>
+
 
