--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
                 <p class="helper-text">Ejemplo: Cancelación gratuita hasta 24h antes</p>
             </div>
             
+            <div class="form-group">
+                <label>Contraseña para Dashboard *</label>
+                <input type="password" id="dashboard_password" minlength="6" required>
+                <p class="helper-text">Mínimo 6 caracteres. Usarás esta contraseña para acceder a tu dashboard y gestionar tu agenda</p>
+            </div>
+            
             <button class="btn" onclick="connectGoogleCalendar()">Conectar Google Calendar</button>
             <div id="error" class="error"></div>
         </div>
@@ -345,5 +351,6 @@
     </script>
 </body>
 </html>
+
 
 
