--- a/oauth-callback.html
+++ b/oauth-callback.html
@@ -105,7 +105,8 @@
                         slot_duration: parseInt(data.slot_duration),
                         contact_phone: data.contact_phone || null,
                         payment_methods: data.payment_methods,
-                        cancellation_policy: data.cancellation_policy
+                        cancellation_policy: data.cancellation_policy,
+                        dashboard_password: data.dashboard_password
                     })
                 });
 
@@ -136,5 +137,6 @@
     </script>
 </body>
 </html>
+
 
 
