--- a/dashboard.html
+++ b/dashboard.html
@@ -208,6 +208,10 @@
                 <label>Código de Doctor</label>
                 <input type="text" id="loginCode" placeholder="DOCDRJUANGARCIA1234">
             </div>
+            <div class="form-group">
+                <label>Contraseña</label>
+                <input type="password" id="loginPassword" placeholder="••••••">
+            </div>
             <button class="btn" onclick="doLogin()">Ingresar</button>
             <div id="loginError" class="error-message"></div>
         </div>
@@ -296,11 +300,12 @@
         let currentProviderCode = null;
 
         // Login
-        async function doLogin() {
+       async function doLogin() {
             const code = document.getElementById('loginCode').value.trim();
+            const password = document.getElementById('loginPassword').value;
             
-            if (!code) {
-                showError('loginError', 'Por favor ingresa tu código de doctor');
+            if (!code || !password) {
+                showError('loginError', 'Por favor ingresa tu código y contraseña');
                 return;
             }
 
@@ -308,9 +313,11 @@
                 const response = await fetch(`${WORKER_URL}/doctor-info`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ provider_code: code })
+                    body: JSON.stringify({ 
+                        provider_code: code,
+                        password: password
+                    })
                 });
-
                 const data = await response.json();
 
                 if (data.success) {
@@ -449,3 +456,4 @@
     </script>
 </body>
 </html>
+
