--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
             const slot_duration = document.getElementById('slot_duration').value;
             const payment_methods = document.getElementById('payment_methods').value.trim();
             const cancellation_policy = document.getElementById('cancellation_policy').value.trim();
+            const dashboard_password = document.getElementById('dashboard_password').value;
 
             if (!office_hours || !consultation_price || !slot_duration || !payment_methods || !cancellation_policy) {
                 alert('Por favor completa todos los campos');
@@ -356,6 +357,7 @@
     </script>
 </body>
 </html>
+
 
 
 
