--- a/index.html
+++ b/index.html
@@ -287,9 +287,7 @@
             const cancellation_policy = document.getElementById('cancellation_policy').value.trim();
             const dashboard_password = document.getElementById('dashboard_password').value;
 
-            if (!office_hours || !consultation_price || !slot_duration || !payment_methods || !cancellation_policy) {
-                alert('Por favor completa todos los campos');
-                return;
+            if (!office_hours || !consultation_price || !slot_duration || !payment_methods || !cancellation_policy || !dashboard_password) {
             }
             if (dashboard_password.length < 6) {
                 alert('La contraseña debe tener al menos 6 caracteres');
@@ -357,6 +355,7 @@
     </script>
 </body>
 </html>
+
 
 
 
