--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             
             <div class="two-col">
                 <div class="form-group">
-                    <label>Precio consulta (USD) *</label>
+                    <label>Precio consulta *</label>
                     <input type="number" id="consultation_price" value="35" min="0" step="0.01" required>
                 </div>
                 
@@ -410,6 +410,7 @@
     </script>
 </body>
 </html>
+
 
 
 
